<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:settingsActivity="com.kinetica.keyboard.settings.SettingsActivity"
    android:supportsSwitchingToNextInputMethod="true">
    <subtype
        android:label="@string/subtype_en_us"
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/subtype_it_it"
        android:imeSubtypeLocale="it_IT"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/subtype_es_es"
        android:imeSubtypeLocale="es_ES"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/subtype_pl_pl"
        android:imeSubtypeLocale="pl_PL"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/subtype_cs_cz"
        android:imeSubtypeLocale="cs_CZ"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/subtype_nl_nl"
        android:imeSubtypeLocale="nl_NL"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/subtype_de_de"
        android:imeSubtypeLocale="de_DE"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/subtype_fr_fr"
        android:imeSubtypeLocale="fr_FR"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/subtype_nb_no"
        android:imeSubtypeLocale="nb_NO"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/subtype_ru_ru"
        android:imeSubtypeLocale="ru_RU"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />
    <subtype
        android:label="@string/subtype_uk_ua"
        android:imeSubtypeLocale="uk_UA"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />
    <subtype
        android:label="@string/subtype_he_il"
        android:imeSubtypeLocale="iw_IL"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />
    <subtype
        android:label="@string/subtype_ar"
        android:imeSubtypeLocale="ar"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />
</input-method>
